[package]
name = "primenumbe-rs"
version = "0.1.0"
authors = ["Saksham Madan <contact_saksham.unserialize@simplelogin.co>"]
descriptions = "Generate the nth prime number"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
